Added local search feature.
commit 4a207123b830425d383bb777d362af3f964d692b
Author: Pieter Robberechts <pieter_robberechts@msn.com>
Date:   Sun Oct 8 16:41:03 2017 +0200

    Implement local search

commit f9bb774b3184c5fd21279ad7a3d5363b5c8c8b43
Author: Jing Ling <admin@hackfun.org>
Date:   Thu Oct 5 02:58:59 2017 +0800

    Added local search feature.

--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -2,6 +2,37 @@
 <%- js('lib/jquery/jquery.min') %>
 <%- js('lib/justified-gallery/jquery.justifiedGallery.min.js') %>
 <%- js('js/main') %>
+<!-- search -->
+<% if (page.search){ %>
+  <%- js('js/search.js') %>
+  <script type="text/javascript">
+    var inputArea = document.querySelector("#search-input");
+    var $resultArea = $("#search-result");
+
+    inputArea.onfocus = function() {
+      var search_path = "<%= config.search.path %>";
+      if (search_path.length == 0) {
+        search_path = "search.xml";
+      }
+      var path = "<%= config.root %>" + search_path;
+      searchFunc(path, 'search-input', 'search-result');
+    }
+
+    inputArea.onkeydown = function(){
+        if(event.keyCode==13){
+            return false
+        }
+    }
+
+    $resultArea.bind("DOMNodeRemoved DOMNodeInserted", function(e) {
+        if (!$(e.target).text()) {
+            $(".search-no-result").show(200);
+        } else {
+            $(".search-no-result").hide();
+        }
+    })
+  </script>
+<% } %>
 <!-- Google Analytics -->
 <% if (theme.plugins.google_analytics){ %>
     <script type="text/javascript">
