--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -1,4 +1,7 @@
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <% if (page.search) { %>
+    <%- partial('_partial/search') %>
+  <% } %>
   <%- partial('_partial/post/gallery') %>
   <div class="content" itemprop="articleBody">
     <%- page.content %>
