add valine comment system support.

--- a/layout/_partial/comments.ejs
+++ b/layout/_partial/comments.ejs
@@ -1,7 +1,13 @@
-<% if(page.comments && theme.plugins.disqus_shortname){ %>
+<% if(page.comments){ %>
     <div class="blog-post-comments">
+        <% if(theme.plugins.disqus_shortname){ %>
         <div id="disqus_thread">
             <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </div>
+        <% } %>
+        <% if(theme.plugins.valine.enable){ %>
+        <div class="vcomment"></div>
+        <% } %>
     </div>
 <% } %>
+
