--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -46,4 +46,5 @@
     <% if (theme.rss) { %>
       <link rel="alternate" href="<%= url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml" />
     <% } %>
+    <%- partial('_partial/styles') %>
 </head>
