remove ad blocking triggers on social media links

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -5,9 +5,9 @@
   <p style="display: inline">
     <% if (theme.customize.social_links) { %>
       Find me on
-      <ul id="sociallinks">
+      <ul id="socialinfo">
         <% for(var i in theme.customize.social_links) { %>
-          <li><a class="icon" target="_blank" href="<%- url_for(theme.customize.social_links[i]) %>" title="<%= i %>"><i class="fa fa-<%= i %>"></i></a></li>
+          <li><a class="icon" target="_blank" href="<%- url_for(theme.customize.social_links[i]) %>"><i class="fa fa-<%= i %>"></i></a></li>
         <% } %>
       </ul>.
     <% } %>
