--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -60,7 +60,7 @@
 <% } %>
 
 <!-- Valine Comments -->
-<% if (theme.plugins.valine.enable){ %>
+<% if (theme.plugins.valine && theme.plugins.valine.enable){ %>
 <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
 <script src="//unpkg.com/valine@latest/dist/Valine.min.js"></script>
 
