Added padding-right to: #header-post #share

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -85,6 +85,7 @@
     clear: both
     text-align: right
     padding-top: 1rem
+    padding-right: 2rem
     li
       margin: 0
       display: block
