--- a/layout/_partial/post/actions_desktop.ejs
+++ b/layout/_partial/post/actions_desktop.ejs
@@ -6,7 +6,7 @@
     <span id="nav">
       <ul>
         <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= i %></a></li>
+          <li><a href="<%- url_for(theme.nav[i]) %>"><%= _p(i) %></a></li>
         <% } %>
       </ul>
     </span>
@@ -22,10 +22,10 @@
         <li><a class="icon" href="#" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast');"><i class="fa fa-chevron-up" aria-hidden="true" onmouseover="$('#i-top').toggle();" onmouseout="$('#i-top').toggle();"></i></a></li>
         <li><a class="icon" href="#"><i class="fa fa-share-alt" aria-hidden="true" onmouseover="$('#i-share').toggle();" onmouseout="$('#i-share').toggle();" onclick="$('#share').toggle();return false;"></i></a></li>
       </ul>
-      <span id="i-prev" class="info" style="display:none;">Previous post</span>
-      <span id="i-next" class="info" style="display:none;">Next post</span>
-      <span id="i-top" class="info" style="display:none;">Back to top</span>
-      <span id="i-share" class="info" style="display:none;">Share post</span>
+      <span id="i-prev" class="info" style="display:none;"><%= _p('Previous post') %></span>
+      <span id="i-next" class="info" style="display:none;"><%= _p('Next post') %></span>
+      <span id="i-top" class="info" style="display:none;"><%= _p('Back to top') %></span>
+      <span id="i-share" class="info" style="display:none;"><%= _p('Share post') %></span>
     </span>
     <br/>
     <div id="share" style="display: none">
