Change the format of the translation to normal usage '__()'

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -17,7 +17,7 @@
         <a href="#"><i class="fa fa-bars fa-2x"></i></a>
       </li>
       <% for (var i in theme.nav) { %> 
-        <li><a href="<%- url_for(theme.nav[i]) %>"><%= _p(i) %></a></li>
+        <li><a href="<%- url_for(theme.nav[i]) %>"><%= __(i) %></a></li>
       <% } %>
     </ul>
   </div>
