--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,12 +1,12 @@
 <footer id="footer">
   <div class="footer-left">
-    Copyright &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %>
+    <%= __('footer.copyright') %> &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %>
   </div>
   <div class="footer-right">
     <nav>
       <ul>
         <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __(i) %></a></li>
+          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i) %></a></li>
         <% } %>
       </ul>
     </nav>
