--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -1,7 +1,7 @@
 <section id="search">
   <form>
-    <input type="text" class="search-input" id="search-input" placeholder="search...">
+    <input type="text" class="search-input" id="search-input" placeholder="<%= __('search.search') %>">
   </form>
   <div id="search-result"></div>
-  <p class="search-no-result">No results found</p>
+  <p class="search-no-result"><%= __('search.no_results') %></p>
 </section>
