--- a/layout/_partial/pagination.ejs
+++ b/layout/_partial/pagination.ejs
@@ -3,7 +3,7 @@
         <% if (page.prev) { %>
             <a href="<%- url_for(page.prev_link) %>"><i class="fa fa-angle-left"></i></a>
         <% } %>
-        <span class="page-number"><%= 'Page ' + page.current + ' of ' + page.total %></span>
+        <span class="page-number"><%= __('pagination.page', page.current, page.total) %></span>
         <% if (page.next) { %>
             <a href="<%- url_for(page.next_link) %>"><i class="fa fa-angle-right"></i>
             </a>
