--- a/layout/_partial/post/actions_desktop.ejs
+++ b/layout/_partial/post/actions_desktop.ejs
@@ -6,7 +6,7 @@
     <span id="nav">
       <ul>
         <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __(i) %></a></li>
+          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i) %></a></li>
         <% } %>
       </ul>
     </span>
@@ -22,10 +22,10 @@
         <li><a class="icon" href="#" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast');"><i class="fa fa-chevron-up" aria-hidden="true" onmouseover="$('#i-top').toggle();" onmouseout="$('#i-top').toggle();"></i></a></li>
         <li><a class="icon" href="#"><i class="fa fa-share-alt" aria-hidden="true" onmouseover="$('#i-share').toggle();" onmouseout="$('#i-share').toggle();" onclick="$('#share').toggle();return false;"></i></a></li>
       </ul>
-      <span id="i-prev" class="info" style="display:none;"><%= __('Previous post') %></span>
-      <span id="i-next" class="info" style="display:none;"><%= __('Next post') %></span>
-      <span id="i-top" class="info" style="display:none;"><%= __('Back to top') %></span>
-      <span id="i-share" class="info" style="display:none;"><%= __('Share post') %></span>
+      <span id="i-prev" class="info" style="display:none;"><%= __('post.desktop.previous') %></span>
+      <span id="i-next" class="info" style="display:none;"><%= __('post.desktop.next') %></span>
+      <span id="i-top" class="info" style="display:none;"><%= __('post.desktop.back_to_top') %></span>
+      <span id="i-share" class="info" style="display:none;"><%= __('post.desktop.share') %></span>
     </span>
     <br/>
     <div id="share" style="display: none">
