--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -1,16 +1,5 @@
-#socialinfo
+p#socialinfo
   display: inline-block
-  list-style: none
-  padding: 0
-  margin: 0
-  li
-    display: inline-block
-  li:after
-    content: ", "
-  li:last-child:after
-    content: ""
-  li:nth-last-child(2):after
-    content: " and "
 
 .post-list
   padding: 0
