--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -39,6 +39,10 @@
     <title><%= page.title ? page.title : config.title %></title>
     <!-- styles -->
     <%- css('css/style') %>
+    <!-- persian font -->
+    <% if (theme.direction) { %>
+    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/vazir-font/v18.0.0/dist/font-face.css">
+    <% } %>
     <!-- rss -->
     <% if (theme.rss === '' && config.feed && config.feed.path) { %>
       <% theme.rss = config.feed.path %>
