Making H2 tags in post pages RTL and replace #header to #nav

--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -34,7 +34,7 @@
   font-family: vazir, sans-serif
   direction: rtl
     
-  #header
+  #nav
     li
       padding-left: 15px
       border-left: 1px dotted $color-accent-1
@@ -62,6 +62,10 @@
     #logo 
       float: right
 
+  article
+    .content
+      h2:before
+        right: -1rem;
 
 @media (min-width: 480px)
   .post-list
