Header RTL bugy

--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -45,6 +45,8 @@
     li:last-child
       margin-right: 15px !important;
       border-left: 0 !important;
+      
+  #header
     #logo 
       float: right
 
