Added post_overview property
- for correct working need to add 'posts_overview' property

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -42,7 +42,7 @@
       </li>
     <% }); %>
   </ul>
-  <% if (theme.show_all_posts) { %>
+  <% if (theme.posts_overview.show_all_posts) { %>
     <%- partial('_partial/pagination') %>
   <% } %>
 </section>
