--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,3 +1,30 @@
 <div class="content" itemprop="articleBody">
-  <%- page.content %>
+  <%= config.description %>
 </div>
+
+<section id="writing">
+  <span class="h1"><a href="<%- url_for("archives") %>"><%= __('index.articles') %></a></span>
+  <% if (theme.tags_overview && site.tags.length) { %>
+  <span class="h2"><%= __('index.topics') %></span>
+  <span class="widget tagcloud">
+    <%- tagcloud(theme.tags_overview) %>
+  </span>
+  <span class="h2"><%= __('index.most_recent') %></span>
+  <% } %>
+  <ul class="post-list">
+    <% if (theme.posts_overview.show_all_posts) { %>
+      <% var show_posts = page.posts.sort('date', 'desc') %>
+    <% } else { %>
+      <% var show_posts = site.posts.sort('date', 'desc').limit(theme.posts_overview.post_count || 5) %>
+    <% } %>
+    <% show_posts.each(function(post, i){ %>
+      <li class="post-item">
+        <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
+        <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %></span>
+      </li>
+    <% }); %>
+  </ul>
+  <% if (theme.posts_overview.show_all_posts) { %>
+    <%- partial('_partial/pagination') %>
+  <% } %>
+</section>
