add mathjax support for single post

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -15,3 +15,7 @@
   </div>
 </article>
 <%- partial('_partial/comments') %>
+
+<% if (page['mathjax']){ %>
+<%- partial('_partial/mathjax') %>
+<% } %>
