--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -113,6 +113,8 @@ body
 @import "_partial/footer"
 @import "_partial/pagination"
 @import "_partial/search"
+@import "_partial/tags"
+@import "_partial/categories"
 // Code
 @import "_highlight/" + $highlight
 
