--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -11,14 +11,15 @@ global-reset()
   box-sizing: border-box
 
 html
+  margin: 0
+  padding: 0
   height: 100%
   border-top: 2px solid $color-text
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
 
 body
-  display: flex
-  flex-direction: column
+  height: 100%
   background-color: $color-background
   color: $color-text
   font-display: swap // @stylint ignore
@@ -27,13 +28,18 @@ body
   font-family: $font-family-body
   line-height: $line-height
   text-rendering: geometricPrecision
+  flex: 1
 
   antialias()
 
-.content
-  flex: 1
 
   @extend $base-style
+
+.content
+  position: relative
+  display: flex
+  flex-direction: column
+  min-height: 100%
 
   p
     hyphens(auto)
