--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,5 +1,8 @@
 #footer
+  position: absolute
+  bottom: 0
   margin-bottom: 10px
+  width: 100%
   color: $color-meta
   vertical-align: top
   text-align: center
