--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -31,6 +31,8 @@
 
   a
     color: $color-meta
+    text-decoration: underline
+    background-image: none
 
   a:hover
     color: lighten($color-meta, 20%)
