--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,4 +1,8 @@
 <% if (index) { %>
+    <% if (post.reblog && post.rebloglink) { %>
+        <a class="icon" href="<%- url_for(post.rebloglink) %>" target="_blank" itemprop="url">
+        <i class="fas fa-link"></i></a>
+    <% } %>
     <% if (post.link) { %>
         <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
     <% } else if (post.title) { %>
