--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,3 +1,7 @@
+<section id="greetings">
+  <p class="giant">Hey, I'm John. Good to know you.</p>
+</section>
+
 <section id="about">
   <% if (config.description) { %>
     <%- markdown(config.description) %>
