--- a/source/css/_fonts.styl
+++ b/source/css/_fonts.styl
@@ -1,4 +1,6 @@
 @font-face
   font-style: normal
   font-family: "Meslo LG"
-  src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype")
+  src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype");
+
+  @import url('https://fonts.googleapis.com/css?family=Zilla+Slab');
