--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -5,6 +5,7 @@ $font-family-tt = "Inconsolata", monospace
 $font-size = 14px
 $line-height = 1.725
 $page-width = 0rem + (hexo-config("page_width") || 39)
+$font-family-huge = "Zilla Slab", serif
 // Logo
 $logo-width = 0px + (hexo-config("logo.width") || 0)
 $logo-height = 0px + (hexo-config("logo.height") || 0)
