--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -34,6 +34,10 @@ body
 
   @extend $base-style
 
+.giant
+  font-family: $font-family-giant
+  font-size: 36em
+
 .content
   position: relative
   display: flex
