--- a/source/css/_colors/white.styl
+++ b/source/css/_colors/white.styl
@@ -1,5 +1,5 @@
 // by @sergodeeva (https://github.com/sergodeeva)
-$color-background = #FFFFFF
+$color-background = #000000
 $color-footer-mobile-1 = darken($color-background, 2%)
 $color-footer-mobile-2 = darken($color-background, 10%)
 $color-background-code = darken($color-background, 2%)
