--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -98,8 +98,8 @@ $base-style
     border-collapse: collapse
     text-align: left
     font-size: $font-size - 2px
-    overflow: auto;
-    display: block;
+    overflow: auto
+    display: block
 
   th
     padding: 8px
