--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -19,6 +19,7 @@ html
   -ms-text-size-adjust: 100%
 
 body
+  margin: 0
   height: 100%
   background-color: $color-background
   color: $color-text
