fix <th> border-color

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -104,7 +104,7 @@ $base-style
 
   th
     padding: 8px
-    border-bottom: 1px dashed $color-code-border
+    border-bottom: 1px dashed $color-border
     color: $color-accent-2
     font-weight: bold
     font-size: $font-size - 1px
