changes code background color to "highlight"
This change allows the specified syntax highlighting theme to control the background of code blocks.

--- a/source/css/_colors/dark.styl
+++ b/source/css/_colors/dark.styl
@@ -1,7 +1,7 @@
 $color-background = #1d1f21
 $color-footer-mobile-1 = lighten($color-background, 2%)
 $color-footer-mobile-2 = lighten($color-background, 10%)
-$color-background-code = lighten($color-background, 2%)
+$color-background-code = hexo-config("highlight")
 $color-border = #666
 $color-meta = #666
 $color-meta-code = #666
