changes code background color to "highlight"
This change allows the specified syntax highlighting theme to control the background of code blocks.

--- a/source/css/_colors/light.styl
+++ b/source/css/_colors/light.styl
@@ -2,7 +2,7 @@
 $color-background = #e2e0de
 $color-footer-mobile-1 = darken($color-background, 2%)
 $color-footer-mobile-2 = darken($color-background, 10%)
-$color-background-code = darken($color-background, 2%)
+$color-background-code = hexo-config("highlight")
 $color-border = #666
 $color-meta = #666
 $color-meta-code = lighten($color-meta, 10%)
