--- a/source/css/_colors/white.styl
+++ b/source/css/_colors/white.styl
@@ -2,7 +2,7 @@
 $color-background = #FFFFFF
 $color-footer-mobile-1 = darken($color-background, 2%)
 $color-footer-mobile-2 = darken($color-background, 10%)
-$color-background-code = darken($color-background, 2%)
+$color-background-code = hexo-config("highlight")
 $color-border = #666
 $color-meta = #666
 $color-meta-code = lighten($color-meta, 10%)
