--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -180,6 +180,15 @@ code
     &:after
       clear: both
 
+  :hover .btn-copy
+    opacity: 1
+
+  .btn-copy
+    font-size: 1.2rem;
+    position: absolute
+    right: 20px
+    opacity: 0
+
   pre
     padding: 0
     border: none
