Add the tooltip

--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -5,22 +5,26 @@
 <% if (is_post()){ %>
   <%- js('lib/clipboard/clipboard.min') %>
   <script type="text/javascript">
-  $(function(){
-    var btn = '<i class="btn-copy far fa-clone"></i>';
+  $(function() {
+    // copy-btn HTML
+    var btn = "<span class=\"btn-copy tooltipped tooltipped-sw\" aria-label=\"<%= __('tooltip.copy_tip') %>\">";
+    btn += '<i class="far fa-clone"></i>';
+    btn += '</span>'; 
+    // mount it!
     $(".highlight .code pre").before(btn);
     var clip = new ClipboardJS('.btn-copy', {
-        target: function(trigger) {
-          return trigger.nextElementSibling;
-        }
+      target: function(trigger) {
+        return trigger.nextElementSibling;
+      }
     });
     clip.on('success', function(e) {
+      e.trigger.setAttribute('aria-label', "<%= __('tooltip.copied') %>");
       e.clearSelection();
     })
   })
   </script>
 <% } %>
 <%- js('js/main') %>
-
 <!-- search -->
 <% if (config.search && (page.search || page.type === "search")){ %>
   <%- js('js/search.js') %>
