--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -99,3 +99,20 @@
         }());
     </script>
 <% } %>
+
+<!--Livere Comments-->
+<% if (theme.livere.enabled && theme.livere.datauid){ %>
+    <script type="text/javascript">
+      (function (d, s) {
+        var j, e = d.getElementsByTagName(s)[0];
+
+        if (typeof LivereTower === 'function') { return; }
+
+        j = d.createElement(s);
+        j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+        j.async = true;
+
+        e.parentNode.insertBefore(j, e);
+      })(document, 'script');
+    </script>
+<% } %>
