Fix borders color in RTL

--- a/source/css/rtl.styl
+++ b/source/css/rtl.styl
@@ -34,7 +34,7 @@
       margin-right: 0px !important // @stylint ignore
       padding-left: 15px
       border-right: 0px !important // @stylint ignore
-      border-left: 1px dotted $color-accent-1
+      border-left: 1px dotted
 
     li:last-child
       margin-right: 15px !important // @stylint ignore
@@ -51,7 +51,7 @@
       margin-right: 0px
       padding-left: 15px
       border-right: 0px
-      border-left: 1px dotted $color-border
+      border-left: 1px dotted
 
     li:last-child
       margin-right: 15px !important // @stylint ignore
