--- a/source/css/rtl.styl
+++ b/source/css/rtl.styl
@@ -65,8 +65,28 @@
       h2:before
         right: -1rem
 
-@media (min-width: 480px)
   .post-list
     .post-item
       .meta
-        text-align: right
+        margin-left: 16px
+        margin-right: inherit
+        
+@media screen and (min-width: 480px)
+  .rtl
+    .post-list
+      .post-item
+        .meta
+          text-align: left
+ 
+@media screen and (max-width: 480px)
+  .rtl
+    #header
+      #title
+        margin-left: 5rem
+
+      #nav
+        ul
+          li
+            left: 1rem
+            right: auto
+            border: 0
