--- a/source/css/_highlight/github-gist.styl
+++ b/source/css/_highlight/github-gist.styl
@@ -4,7 +4,8 @@
  */
 
 .highlight
-    padding: 0.5em
+    // background-color: #f6f8fa
+    // padding: 0.5em
     color: #333333
     .code
         .comment,
