--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,6 +1,6 @@
 // Fonts
-$font-family-body = "Menlo", "Meslo LG", monospace
-$font-family-mono = "Menlo", "Meslo LG", monospace
+$font-family-body = "Fira Code", source-han-sans-simplified-c, sans-serif, monospace
+$font-family-mono = "Fira Code", source-han-sans-simplified-c, sans-serif, monospace
 $font-family-tt = "Inconsolata", monospace
 $font-size = 14px
 $line-height = 1.725
