add:icp support

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,6 +1,8 @@
 <footer id="footer">
   <div class="footer-left">
-    <%= __('footer.copyright') %> &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %>
+    <%= __('footer.copyright') %> &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %> <% if (theme.icp) { %>
+    <a href="http://www.beian.miit.gov.cn/" target="_blank"><%= __(theme.icp) %></a>
+    <% } %>
   </div>
   <div class="footer-right">
     <nav>
