fix:nav font weight

--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -6,7 +6,8 @@
   color: $color-meta
   vertical-align: top
   text-align: center
-  font-size: 11px
+  font-size: 12px
+  font-weight: 500
 
   ul
     margin: 0
