--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -36,6 +36,7 @@
     <% if (theme.direction) { %>
       <%- css('css/rtl') %>
     <% } %>
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/d4fffb6b48/widget/style.css">
     <!-- rss -->
     <% if (theme.rss === '' && config.feed && config.feed.path) { %>
       <% theme.rss = config.feed.path %>
