--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -6,7 +6,7 @@
   color: $color-meta
   vertical-align: top
   text-align: center
-  font-size: 12px
+  font-size: 14px
   font-weight: 500
 
   ul
@@ -39,9 +39,9 @@
     color: lighten($color-meta, 20%)
 
   .footer-left
-    height: 20px
+    //height: 20px
     vertical-align: middle
-    line-height: 20px
+    //line-height: 20px
 
 @media (min-width: 39rem)
   #footer
