--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -133,9 +133,9 @@ pre
   padding-bottom: 0
   border: 1px dotted $color-border
   border-radius: 4px
-  font-size: 13px
+  font-size: 16px
   font-family: $font-family-mono
-  line-height: 22px
+  line-height: 26px
   -webkit-border-radius: 4px
 
   code
@@ -151,7 +151,7 @@ code
 
 p
   code
-    padding: .2em .4em
+    padding: 0
     margin: 0
     font-weight: 500
     font-family: $font-family-mono
@@ -161,6 +161,7 @@ p
     //padding: 0 5px
     //border: 1px dotted $color-border
     border-radius: 4px
+    border-style: none
     -webkit-border-radius: 4px
 
 table tr:nth-child(2n){background: #f6f8fa;}
@@ -198,7 +199,7 @@ pre
 
 
 table
-  font-size: 14px !important
+  font-size: 16px !important
   font-weight: 400;
   font-family: $font-family-mono
   tr
