--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -36,7 +36,7 @@
     letter-spacing: .01em
     font-weight: 500
     font-style: normal
-    font-size: .8rem
+    font-size: 1rem
 
     ul
       margin: 0
