--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -72,7 +72,7 @@
     letter-spacing: .01em
     font-weight: 500
     font-style: normal
-    font-size: .8rem
+    font-size: 1rem
 
     ul
       line-height: 15px
