delete:some heighlight style

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -136,7 +136,7 @@
 
     .toc-level-2
       color: $color-text
-      font-size: .8rem
+      font-size: 1rem
 
       &:before
         color: $color-accent-1
@@ -144,14 +144,15 @@
 
     .toc-level-3
       color: $color-meta
-      font-size: .7rem
+      font-size: .9rem
 
     .toc-level-4
       color: darken($color-meta, 20%)
-      font-size: .4rem
+      font-size: .8rem
 
     .toc-level-5
-      display: none
+      color: darken($color-meta, 20%)
+      font-size: .7rem
 
     .toc-level-6
       display: none
