--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -211,6 +211,12 @@ table
       background: #505050;
       text-align: right;
       color: #ddffee;
+    .code
+      pre
+        .line
+          .meta + .bash
+            color: #969896;
+
 
 .highlight
   // margin: 0;
