--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -9,7 +9,7 @@
       <% var i = 0 %>
       <% for(var link in theme.social_links) { %>
         <% if (link == 'mail') { %>
-          <a class="icon" target="_blank" href="<%- url_for(theme.social_links[link]) %>">
+          <a class="icon" target="_blank" href="<%- theme.social_links[link] %>">
             <i class="fas fa-envelope"></i><!--
       ---></a><!--
       ---><% } else { %>
