Fix H4, H5 and H6 style
Underline filled the full page width.

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -32,10 +32,9 @@ $base-style
   h5
   h6
     display: inline
-    border-bottom: 1px dashed $color-accent-3
-    color: $color-accent-3
     text-decoration: none
-    font-weight: normal
+    color: $color-accent-3
+    font-weight: bold
     font-size: .9rem
 
   h3
