--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -45,8 +45,11 @@ $base-style
     margin-bottom: .5rem
 
   hr
-    border: 1px dashed $color-accent-3
+    border: .5px dashed $color-accent-3
+    opacity: .5
     margin: 0
+    margin-top: 20px
+    margin-bottom: 20px
 
   strong
     font-weight: bold
