Fix 'no results found' problem

--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -50,10 +50,12 @@
     });
 
     var observer = new MutationObserver(function(mutationsList, observer) {
-      if (mutationsList[0].addedNodes) {
-        $(".search-no-result").show(200);
-      } else {
-        $(".search-no-result").hide();
+      if (mutationsList.length == 1) {
+        if (mutationsList[0].addedNodes.length) {
+          $(".search-no-result").hide();
+        } else if (mutationsList[0].removedNodes.length) {
+          $(".search-no-result").show(200);
+        }
       }
     });
 
