--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -5,7 +5,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <% if (is_post() && page.tags && page.tags.length) { %>
-      <meta name="keywords" content="<%- page.tags.map(x => x.name.join(",") %>">
+      <meta name="keywords" content="<%- page.tags.map(x => x.name).join(",") %>">
     <% } %>
     <%- open_graph({
         image:          thumbnail(page),
