--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,3 +1,3 @@
 <!-- styles -->
-<%- css('lib/font-awesome/css/all.min.css') %>
-<%- css('lib/justified-gallery/css/justifiedGallery.min.css') %>
+<%- css('https://cdn.bootcss.com/font-awesome/5.11.2/css/all.min.css') %>
+<%- css('https://cdn.bootcss.com/justifiedGallery/3.7.0/css/justifiedGallery.min.css') %>
